--- a/lang_phpBB_tr_302/language/tr/email/group_request.txt
+++ b/lang_phpBB_tr_302/language/tr/email/group_request.txt
@@ -2,7 +2,7 @@ Subject: Grubunuza katılım için bir istek yapıldı
 
 Değerli {USERNAME},
 
-"{SITENAME}" mesaj panosunda bulunan bir kullanıcı, yöneticisi olduğunuz "{GROUP_NAME}" grubuna katılmak istiyor.
+"{SITENAME}" mesaj panosunda bulunan "{REQUEST_USERNAME}" adlı kullanıcı, yöneticisi olduğunuz "{GROUP_NAME}" grubuna katılmak istiyor.
 Grup üyeliğini onaylamak veya reddetmek için lütfen aşağıdaki bağlantıyı ziyaret edin:
 
 {U_PENDING}
