--- a/lang_phpBB_tr/language/tr/email/admin_welcome_inactive.txt
+++ b/lang_phpBB_tr/language/tr/email/admin_welcome_inactive.txt
@@ -6,14 +6,12 @@ Lütfen bu e-postayı saklayın. Kullanıcı bilgileriniz aşağıda bulunmaktad
 
 ----------------------------
 Kullanıcı adı: {USERNAME}
-Şifre: {PASSWORD}
-
 Mesaj panosu URL adresi: {U_BOARD}
 ----------------------------
 
-Kullanıcı hesabınız şu anda aktif değil. Mesaj panosu yöneticisi hesabınızı aktif hale getirdikten sonra bir e-posta daha alacaksınız.
+Your account is currently inactive and will need to be approved by an administrator before you can log in. Another email will be sent when this had occured.
 
-Lütfen kullanıcı bilgilerinizi unutmayın. Şifreniz veritabanımızda şifrelenmiş bir halde saklanmaktadır. Şifrenizi geri getirmek ve mesaj panosu yöneticileri tarafından görülmesi mümkün değildir. Şifrenizi unuttuğunuz zaman e-posta adresinize yeni bir tane isteyebilirsiniz ve bu hesabı aynı yolla aktif etmelisiniz.
+Your password has been securely stored in our database and cannot be retrieved. In the event that it is forgotten, you will be able to reset it using the email address associated with your account.
 
 Üye olduğunuz için teşekkürler.
 
