--- a/lang_phpBB_tr/language/tr/email/installed.txt
+++ b/lang_phpBB_tr/language/tr/email/installed.txt
@@ -4,17 +4,16 @@ Tebrikler,
 
 phpBB'yi sunucunuza başarıyla yüklediniz.
 
-Bu e-postayı yüklemeniz için önemli bilgiler içerdiğinden güvenli bir yerde saklayınız. Şifreniz veritabanında tekrar şifrelenmiştir ve geri dönüşü yoktur, buna karşın unuttuğunuz zaman yeni bir şifre isteyebilirsiniz.
+This e-mail contains important information regarding your installation and should be kept for reference. Your password has been securely stored in our database and cannot be retrieved. In the event that it is forgotten, you will be able to reset it using the email address associated with your account.
 
 ----------------------------
 Kullanıcı adı: {USERNAME}
-Şifre: {PASSWORD}
 
-Mesaj panosu URL adresi: {U_BOARD}
+Board URL: {U_BOARD}
 ----------------------------
 
-phpBB yüklemeniz için yardımcı bilgileri yüklemenizin yapıldığı docs klasörünün içerisinden ve phpBB.com'un destek sayfasından bulabilirsiniz - http://www.phpbb.com/support/
+Useful information regarding the phpBB software can be found in the docs folder of your installation and on phpBB.com's support page - http://www.phpbb.com/support/
 
-Mesaj panosu güvenliğini korumak için, şu an kullandığınız yazılımdan başka mevcut olan yeni yazılımlardan haberdar olabilmeniz için phpBB.com'un mail listesine abone olmanızı şiddetle tavsiye ederiz, bunun için üstteki URL adresindeki ilgili bölümü kullanabilirsiniz.
+In order to keep your board safe and secure, we highly recommended keeping current with software releases. For your convenience, a mailing list is available at the page referenced above.
 
 {EMAIL_SIG}
