--- a/lang_phpBB_tr/language/tr/email/installed.txt
+++ b/lang_phpBB_tr/language/tr/email/installed.txt
@@ -4,16 +4,16 @@ Tebrikler,
 
 phpBB'yi sunucunuza başarıyla yüklediniz.
 
-This e-mail contains important information regarding your installation and should be kept for reference. Your password has been securely stored in our database and cannot be retrieved. In the event that it is forgotten, you will be able to reset it using the email address associated with your account.
+Bu e-posta kurulumunuz hakkında önemli bilgiler içermektedir ve gerektiğinde başvurma açısından saklanmalıdır. Şifreniz veritabanımızda güvenli bir şekilde saklanmaktadır ve ele geçirilemeyecek durumdadır. Eğer şifrenizi unutursanız, hesabınız ile tanımlı olan e-posta adresinizi kullanarak şifrenizi sıfırlayabilirsiniz.
 
 ----------------------------
 Kullanıcı adı: {USERNAME}
 
-Board URL: {U_BOARD}
+Mesaj Panosu URL adresi: {U_BOARD}
 ----------------------------
 
-Useful information regarding the phpBB software can be found in the docs folder of your installation and on phpBB.com's support page - http://www.phpbb.com/support/
+phpBB yazılımı hakkında ihtiyacınız olabilecek bilgilere kurulumunuz içerisindeki docs klasöründen ve phpBB.com'un destek sayfasından ulaşabilirsiniz. - http://www.phpbb.com/support/
 
-In order to keep your board safe and secure, we highly recommended keeping current with software releases. For your convenience, a mailing list is available at the page referenced above.
+Mesaj panonuzu güvende ve emniyette tutmanız için, yazılım güncelleme duyurularını takip etmenizi kesinlikle öneririz. Size yardımcı olması için, sayfanın altındaki e-posta listesini kullanabilirsiniz.
 
 {EMAIL_SIG}
