--- a/lang_phpBB_tr/language/tr/email/admin_welcome_inactive.txt
+++ b/lang_phpBB_tr/language/tr/email/admin_welcome_inactive.txt
@@ -9,9 +9,9 @@ Kullanıcı adı: {USERNAME}
 Mesaj panosu URL adresi: {U_BOARD}
 ----------------------------
 
-Your account is currently inactive and will need to be approved by an administrator before you can log in. Another email will be sent when this had occured.
+Hesabınız şu an pasif durumdadır ve giriş yapabilmeniz için önce bir yönetici tarafından onaylanması gerekmektedir. Onay işlemi gerçekleştiğinde e-posta ile tekrar bilgilendirileceksiniz.
 
-Your password has been securely stored in our database and cannot be retrieved. In the event that it is forgotten, you will be able to reset it using the email address associated with your account.
+Şifreniz veritabanımızda güvenli bir şekilde saklanmaktadır ve ele geçirilemeyecek durumdadır. Eğer şifrenizi unutursanız, hesabınız ile tanımlı olan e-posta adresinizi kullanarak şifrenizi sıfırlayabilirsiniz.
 
 Üye olduğunuz için teşekkürler.
 
