--- a/lang_phpBB_tr/language/tr/email/user_reactivate_account.txt
+++ b/lang_phpBB_tr/language/tr/email/user_reactivate_account.txt
@@ -9,7 +9,7 @@ Lütfen bu e-postayı kayıtlarınızda saklayın. Hesap bilginiz alttaki gibidi
 Kullanıcı adı: {USERNAME}
 ----------------------------
 
-Your password has been securely stored in our database and cannot be retrieved. In the event that it is forgotten, you will be able to reset it using the email address associated with your account.
+Şifreniz veritabanımızda güvenli bir şekilde saklanmaktadır ve ele geçirilemeyecek durumdadır. Eğer şifrenizi unutursanız, hesabınız ile tanımlı olan e-posta adresinizi kullanarak şifrenizi sıfırlayabilirsiniz.
 
 Hesabınızı yeniden aktif etmek için lütfen alttaki bağlantıyı ziyaret edin:
 
