--- a/lang_phpBB_tr/language/tr/email/user_welcome.txt
+++ b/lang_phpBB_tr/language/tr/email/user_welcome.txt
@@ -6,10 +6,10 @@ Lütfen bu e-postayı saklayınız. Kullanıcı bilgileriniz altta bulunmaktadı
 
 ----------------------------
 Kullanıcı adı: {USERNAME}
-Board URL: {U_BOARD}
+Mesaj panosu URL adresi: {U_BOARD}
 ----------------------------
 
-Your password has been securely stored in our database and cannot be retrieved. In the event that it is forgotten, you will be able to reset it using the email address associated with your account.
+Şifreniz veritabanımızda güvenli bir şekilde saklanmaktadır ve ele geçirilemeyecek durumdadır. Eğer şifrenizi unutursanız, hesabınız ile tanımlı olan e-posta adresinizi kullanarak şifrenizi sıfırlayabilirsiniz.
 
 Kayıt olduğunuz için teşekkür ederiz.
 
