--- a/lang_phpBB_tr/language/tr/email/user_welcome_inactive.txt
+++ b/lang_phpBB_tr/language/tr/email/user_welcome_inactive.txt
@@ -6,14 +6,14 @@ Lütfen bu e-postayı saklayın. Kullanıcı bilgileriniz altta bulunmaktadır:
 
 ----------------------------
 Kullanıcı adı: {USERNAME}
-Board URL: {U_BOARD}
+Mesaj panosu URL adresi: {U_BOARD}
 ----------------------------
 
-Please visit the following link in order to activate your account:
+Hesabınızı aktif hale getirmek için lütfen alttaki bağlantıyı ziyaret edin:
 
 {U_ACTIVATE}
 
-Your password has been securely stored in our database and cannot be retrieved. In the event that it is forgotten, you will be able to reset it using the email address associated with your account.
+Şifreniz veritabanımızda güvenli bir şekilde saklanmaktadır ve ele geçirilemeyecek durumdadır. Eğer şifrenizi unutursanız, hesabınız ile tanımlı olan e-posta adresinizi kullanarak şifrenizi sıfırlayabilirsiniz.
 
 Kayıt olduğunuz için teşekkür ederiz.
 
