--- a/lang_phpBB_tr/language/tr/email/pm_report_deleted.txt
+++ b/lang_phpBB_tr/language/tr/email/pm_report_deleted.txt
@@ -2,7 +2,7 @@ Subject: Bildiri silindi - "{PM_SUBJECT}"
 
 Merhaba {USERNAME},
 
-Bu bildiriyi alıyorsunuz çünkü "{SITENAME}" mesaj panosunda bildiri yaptığınız "{PM_SUBJECT}" başlıklı mesaj bir moderatör ya da yönetici tarafından silindi.
+Bu bildiriyi alıyorsunuz çünkü "{SITENAME}" mesaj panosunda bildiri yaptığınız "{PM_SUBJECT}" başlıklı özel mesaj bir moderatör ya da yönetici tarafından silindi.
 
 
 {EMAIL_SIG}
