--- a/lang_phpBB_tr/language/tr/email/admin_welcome_activated.txt
+++ b/lang_phpBB_tr/language/tr/email/admin_welcome_activated.txt
@@ -2,6 +2,8 @@ Subject: Hesap aktif edilmiştir
 
 Merhaba {USERNAME},
 
-"{SITENAME}" mesaj panosunda bulunan hesabınız aktif edildi. Bir önceki e-postada gönderilen şifre ve kullanıcı adıyla giriş yapabilirsiniz.
+"{SITENAME}" mesaj panosunda bulunan hesabınız aktif edildi. Bir önceki e-postada gönderilen kullanıcı adıyla giriş yapabilirsiniz.
+
+Şifreniz veritabanımızda güvenli bir şekilde saklanmaktadır ve ele geçirilemeyecek durumdadır. Eğer şifrenizi unutursanız, hesabınız ile tanımlı olan e-posta adresinizi kullanarak şifrenizi sıfırlayabilirsiniz.
 
 {EMAIL_SIG}
