Dil dosyaları phpBB 3.0.10 sürümü için güncellendi.
Signed-off-by: phpbbturkiye <info@phpbbturkey.com>

--- a/lang_phpBB_tr/language/tr/email/privmsg_notify.txt
+++ b/lang_phpBB_tr/language/tr/email/privmsg_notify.txt
@@ -8,7 +8,7 @@ Merhaba {USERNAME},
 
 Yeni mesajınızı alttaki bağlantıya tıklayarak görüntüleyebilirsiniz:
 
-{U_INBOX}
+{U_VIEW_MESSAGE}
 
 Unutmayın ki uyarılma seçeneğini profilinizden istediğiniz zaman kapatabilirsiniz.
 
