Dil dosyalarında Linux line endings (LF) düzenlemeleri yapıldı ve bazı hatalar giderildi. (phpBB 3.0.12 sürümü için dosyalar güncellendi)

--- a/lang_phpBB_tr/language/tr/email/admin_send_email.txt
+++ b/lang_phpBB_tr/language/tr/email/admin_send_email.txt
@@ -3,6 +3,8 @@ Aşağıdaki e-posta size "{SITENAME}" yöneticisi tarafından gönderildi. Eğe
 
 {CONTACT_EMAIL}
 
+Bu, tüm e-postayı içerir (özellikle başlıklar). 
+
 Size gönderilen e-posta:
 ~~~~~~~~~~~~~~~~~~~~~~~~
 
